# evals

./: .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: publish-python.yml
examples/: 01_csv_qa.py  02_json_import.py  03_image_generation.py  04_config_options.py  05_multistep_agent.py  image_api_smoke.py  qa_smoke.py  realtime_text_smoke.py  realtime_voice_agent_smoke.py  responses_image_smoke.py  returns_policy_demo.py  returns_policy_demo_instructions.md  support_agent_demo.py  support_agent_demo_instructions.md  support_demo_common.py  support_guardrail_demo.py
examples/datasets/: config_options.csv  image_prompts.csv  qa.csv  realtime_text_smoke.csv  realtime_voice_smoke.csv  returns_policy_demo.csv  support_agent_demo.csv  support_tickets.csv
examples/datasets/json_cases/: daypack.json  rain_shell.json
examples/prompts/: config_system.md  returns_policy.md  returns_policy_weak.md  support_guardrail.md  support_workload.md
src/evals/: __init__.py  __main__.py  _utils.py  artifacts.py  builtins.py  cli.py  console.py  errors.py  evaluation.py  experiment.py  models.py  openai.py  runner.py  scaffold.py  storage.py
src/evals/templates/: AGENTS.md
src/prism_evals/: __init__.py  __main__.py  _utils.py  artifacts.py  builtins.py  cli.py  console.py  datasets.py  errors.py  evaluation.py  experiment.py  models.py  openai.py  runner.py  scaffold.py  storage.py
src/prism_evals/templates/: AGENTS.md
tests/: conftest.py  test_artifacts.py  test_builtins.py  test_cli_viewer.py  test_console.py  test_datasets.py  test_experiment_api.py  test_openai_wrapper.py  test_runner.py  test_scaffold.py
viewer/: AGENTS.md  package-lock.json  package.json  tailwind.config.ts
viewer/app/: globals.css  layout.tsx  page.tsx
viewer/app/api/compare/: route.ts
viewer/app/api/runs/: route.ts
viewer/app/api/runs/[runKey]/: route.ts
viewer/app/api/runs/[runKey]/records/: route.ts
viewer/app/artifacts/[runKey]/[artifactName]/: route.ts
viewer/app/compare/: page.tsx
viewer/app/media/[runKey]/[...mediaPath]/: route.ts
viewer/app/runs/[runKey]/: page.tsx
viewer/components/: ComparePage.tsx  RunDetailPage.tsx  RunsPage.tsx  format.ts  ui.tsx
viewer/lib/: evals.ts  media.ts  preferences.ts  types.ts
viewer/lib/server/: runs.ts  viewer.ts
viewer/test/: evals.test.ts  preferences.test.ts  viewer.test.ts
