[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pt-evals"
version = "0.5.6"
description = "Local Python experiment framework for OpenAI Responses API evals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.68.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
]

[project.scripts]
pt-evals = "evals.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/evals"]

[tool.hatch.build.targets.wheel.force-include]
"viewer/app" = "evals/viewer/app"
"viewer/components" = "evals/viewer/components"
"viewer/lib" = "evals/viewer/lib"
"viewer/next-env.d.ts" = "evals/viewer/next-env.d.ts"
"viewer/next.config.ts" = "evals/viewer/next.config.ts"
"viewer/package-lock.json" = "evals/viewer/package-lock.json"
"viewer/package.json" = "evals/viewer/package.json"
"viewer/postcss.config.mjs" = "evals/viewer/postcss.config.mjs"
"viewer/tailwind.config.ts" = "evals/viewer/tailwind.config.ts"
"viewer/tsconfig.json" = "evals/viewer/tsconfig.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
