[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-evals"
version = "0.7.0"
description = "Local experiment framework for OpenAI API evals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.68.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
]

[project.scripts]
prism = "prism_evals.cli:main"
prism-evals = "prism_evals.cli:main"
pe = "prism_evals.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prism_evals"]

[tool.hatch.build.targets.wheel.force-include]
"viewer/app" = "prism_evals/viewer/app"
"viewer/components" = "prism_evals/viewer/components"
"viewer/lib" = "prism_evals/viewer/lib"
"viewer/next-env.d.ts" = "prism_evals/viewer/next-env.d.ts"
"viewer/next.config.ts" = "prism_evals/viewer/next.config.ts"
"viewer/package-lock.json" = "prism_evals/viewer/package-lock.json"
"viewer/package.json" = "prism_evals/viewer/package.json"
"viewer/postcss.config.mjs" = "prism_evals/viewer/postcss.config.mjs"
"viewer/tailwind.config.ts" = "prism_evals/viewer/tailwind.config.ts"
"viewer/tsconfig.json" = "prism_evals/viewer/tsconfig.json"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
